css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Redressed&display=swap');


body {
  font-family: 'Redressed', cursive;
/*  font-family: 'Raleway', sans-serif; */
/*  background-color: #424242; */
  font-size: 20px;
  line-height: 1.5em;
  color: #fff;
  background-image: url('https://wallpapercave.com/wp/MR5PkN8.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

label {
  font-size: 25px;
}

.container {
  width: 80%;
  margin: 20px auto;
}

.head {
  padding: 20px 0;
}

.head h1 {
  text-align: center;
  font-size: 40px;
  font-family: 'Redressed', cursive;
}

.head p {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  font-size: 20px;
  margin: 15px 0;
  line-height: 1.5em;
}

.etch {
  display: flex;
  flex-direction: row;
}

.controls {
  height: 530px;
  margin: 10px 20px 10px 0;
  width: 350px;
}
/*
.controls > * {
  border: 1px solid #000;
}
*/
.color {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  align-content: center;
  height: 200px;
}

.sliders {
  flex: 2;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  list-style: none;
}

.sliders input {
  float: right;
  margin-right: 30px;
}

#showColor {
  margin: auto auto;
  width: 55px;
  height:55px;
  box-sizing: border-box;
  border: 4px solid #000;
  border-radius: 2px;
}

.buttons {
  height: 70px;
  display: flex;
  justify-content: space-around;
}

.buttons > * {
  margin: auto auto;
  height: 30px;
  width: 95px;
  font-family: 'Raleway', sans-serif;
  font-size: 18px;
  border: none;
  border-radius: 15px;
  color: #f3f3f3;
  background-image: linear-gradient(to top right, #223c70, #27e6e9);
  background-repeat: no-repeat;
  background-size: cover;
  cursor: pointer;
  box-shadow: -4px 5px 7px 0px #000;
}

.buttons > *:hover {
  -webkit-transform: scale(1.05);
}
/*
.buttons > *:active {
  background-color: orange;
}
*/
.buttons > *:focus {
  outline: none;
}

.pressed {
/*  background-color: blue; */
  box-shadow: -1px 1px 5px 0px #fff;
  background-image: linear-gradient(to top right, #15274a, #14797a);
  background-repeat: no-repeat;
  background-size: cover;
}

.boxes {
  margin-top: 30px;
  height: 70px;
}

.pixl {
  margin-top: 16px;
  float: left;
}

#clear {
  float: right;
  margin: 10px 40px;
  height: 50px;
  width: 70px;
  border-radius: 50%;
  font-family: 'Raleway', sans-serif;
  text-align: center;
  font-size: 15px;
  cursor: pointer;
  outline: none;
  color: #fff;
  border: none;
  box-shadow: -4px 5px 7px 0px #000;
  background-image: linear-gradient(to top right, #2b3559, #abf1ff);
}

#clear:hover {
  -webkit-transform: scale(1.05);
  background-image: linear-gradient(to top right, #9e0000, #ff4a4a);
}

#grid-container {
  flex-shrink: 0;
  margin: 0 auto;
  border: 10px solid #000;
  border-radius: 10px;
  width: 530px;
  height: 530px;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  touch-action: none; /* for mobile/touch screens */
}

.pixel {
  width: 55px;
  height: 55px;
  border: 1px solid #e0e0e0;
  padding: 0 0;
  margin: 0 0;
  box-sizing: border-box;
}

@media only screen and (max-width: 800px) {
  .container {
    width: 92%;
  }
  .etch {
    flex-direction: column;
  }
  .controls {
    order: 1;
    width: 80%;
    margin: 0 auto;
  }

  .slider {
    display: flex;
    flex-direction: column;
  }

  .sliders input {
    width: 90px;
    margin-right: 30px;
  }


  .buttons > * {
    width: 70px;
    font-family: 'Raleway', sans-serif;
    font-size: 14px;
  }

  .pixl {
    margin-top: 0;
  }

  #grid-container {
    width: 320px;
    height: 320px;
  }
}

